# palette_generator

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css
public/: palette.glb
src/: background.rs  input.css  main.rs  palette.rs
